--- a/package.json
+++ b/package.json
@@ -1,36 +1,57 @@
 {
-  "name": "foo",
+  "name": "react-express-app",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "16.8.5",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
-    "typescript": "3.5.3"
+  "description": "Awesome and super-simple app with React front-end and Express back-end.",
+  "license": "MIT",
+  "private": false,
+  "repository": {
+    "url": "https://github.com/alexdevero/react-express-app",
+    "type": "git"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "keywords": [
+    "app",
+    "boilerplate",
+    "express",
+    "react",
+    "starter"
+  ],
+  "bugs": {
+    "url": "https://github.com/alexdevero/react-express-app/issues"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "scripts": {
+    "start": "concurrently \"yarn start-frontend || npm run start-frontend\" \"yarn start-backend || npm run start-backend\"",
+    "start-backend": "nodemon server/server.js",
+    "start-frontend": "react-scripts start",
+    "build": "node ./buildScript",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "debug": "~4.1.1",
+    "morgan": "^1.9.1",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1",
+    "fs-extra": "8.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.1",
+    "nodemon": "^1.19.1",
+    "react-scripts": "^3.0.1"
   }
 }
